<resources>
    <string name="app_name">loopdeck</string>
    <string name="title_main">Choose video from …</string>
    <string name="msg_camera">Camera</string>
    <string name="msg_gallery">Gallery</string>

    <string name="permission_title_rationale">Permission needed</string>
    <string name="permission_read_storage_rationale">Storage read permission is needed to pick files.</string>
    <string name="toast_cannot_retrieve_selected_video">Cannot retrieve selected video</string>
    <string name="label_select_video">Select Video</string>

    <string name="welcome">Welcome to the OneDrive API Explorer!</string>
    <string name="start_exploring">Start Browsing Your OneDrive</string>
    <string name="sign_out">Sign out</string>
    <string name="empty_list">Folder is empty</string>
    <string name="empty_file">Downloading item please wait a few seconds</string>
    <string name="loading_progress_text">Downloading item information…</string>
    <string name="rename">Rename</string>
    <string name="upload_file">Upload File</string>
    <string name="create_folder">Create Folder</string>
    <string name="refresh">Refresh</string>
    <string name="display_item_default_name">Foo.bar.jpg</string>
    <string name="display_item_default_types">Audio, Photo, Video</string>
    <string name="item_fragment_item_lookup_error">Error looking up this item %1$s</string>
    <string name="confirm_delete_action">Are you sure you want to delete %1$s?</string>
    <string name="deleted_this_item">"Deleted %1$s"</string>
    <string name="renamed_item">Renamed file %1$s to %2$s</string>
    <string name="rename_error">Error renaming file %1$s</string>
    <string name="new_folder_hint">New Folder</string>
    <string name="created_folder">Created folder file %1$s under %2$s</string>
    <string name="new_folder_error">Error creating new folder under %1$s</string>
    <string name="upload_complete">"Upload %1$s complete"</string>
    <string name="upload_failed">"Upload %1$s failed"</string>
    <string name="item_path_separator">/</string>
    <string name="download">Download</string>
    <string name="file_from_onedrive">Downloading from OneDrive</string>
    <string name="starting_download_message">Starting file download</string>
    <string name="thumbnail_description">Thumbnail for %1$s</string>
    <string name="upload_in_progress_title">Upload in progress</string>
    <string name="upload_in_progress_message">Uploading…</string>
    <string name="upload_in_progress_number_format">%1$d/%2$d bytes</string>
    <string name="view_format_visualize">Visualization</string>
    <string name="view_format_json">Json Response</string>
    <string name="wifi_unavailable_error_message">Unable to access the internet, please visit connection settings</string>
    <string name="created_link">Link created, and copied into the Android clipboard</string>
    <string name="create_link">Create a Link</string>
    <string name="view_delta">View Delta</string>
    <string name="delta_title">Viewing Delta of %1$s</string>
    <string name="empty_delta">No changes since last request</string>
    <string name="cleared_saved_delta_tokens">Cleared all saved delta tokens</string>
    <string name="cleared_saved_delta_token">Cleared the delta tokens for %1$s</string>
    <string name="reset_all_tokens">Reset All Delta Tokens</string>
    <string name="reset_token">Reset this Delta Token</string>
    <string name="set_copy_destination">Set Copy Destination</string>
    <string name="copy_item">Copy to Destination</string>
    <string name="copy_success_message">Created a copy of %1$s in the path %2$s</string>
    <string name="upload_failed_name_conflict">The filename conflicted with another file</string>
    <string name="navigate_by_path">Navigate by Path</string>
    <string name="navigate">Navigate</string>
    <string name="error_title">Error!</string>
    <string name="close">Close</string>
    <string name="max_pages_downloaded">Maximum number of pages downloads</string>
    <string name="recents">Recents</string>
    <string name="playlist_title">Playlist title</string>
    <string name="navigation_drawer_open">open</string>
    <string name="navigation_drawer_close">close</string>
    <string name="delete">delete</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="video_editing">Loopdeck Editor</string>
    <string name="save">Save</string>
    <string name="processing_video">Processing Video</string>
    <string name="video_1">Video 1</string>
    <string name="video_2">Video 2</string>
    <string name="select_music">Select music</string>
    <string name="label">Label</string>

    <string name="error_filter">Select the video which you want to add filter animation</string>
    <string name="error_crop">Select the video which you want to add crop</string>
    <string name="error_music">Select the video which you want to merge the audio</string>
    <string name="error_speed">Select the video which you want to add speed animation</string>
    <string name="error_text">Select the video which you want to add text inside video</string>
    <string name="error_sticker">Select the video which you want to add sticker inside video</string>
    <string name="error_merge">Select 2 videos which you want to merge</string>
    <string name="error_transition">Select the video which you want to perform transition</string>

    <string name="error_select_sticker">Select the sticker which you want to show inside the video</string>
    <string name="error_select_sticker_pos">Select the position where you want to show the sticker</string>
    <string name="error_add_text">Add the text which you want to show inside the video</string>
    <string name="error_add_text_pos">Select the position where you want to show the text</string>
    <string name="error_select_speed">Select the playback speed which you want to apply to the video</string>
    <string name="error_select_filter">Select the filter which you want to apply to the video</string>
    <string name="error_select_smaller_video">Select the video smaller than 4 minutes</string>
    <string name="play_time">Play Time</string>
    <string name="enter_text_here">Enter text here</string>

    <string name="save_video">Would you like to save your edited video?</string>
    <string name="Continue">Continue</string>
    <string name="successfully_saved">Your video was successfully saved</string>

    <string name="not_supported_video">Video format is not supported. Would you like to convert avi to mp4 format?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="short_seconds">sec</string>
    <string name="megabyte">MB</string>
    <string name="kilobyte">KB</string>
    <string name="trimming_progress">Trimming your video...</string>
    <string name="cancel">Cancel</string>
    <string name="select_a_video">Select a video</string>
    <string name="select_action">Select Action</string>
    <string name="select_video_from_gallery">Select video from gallery</string>
    <string name="record_video_from_camera">Record video from camera</string>

</resources>