<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/action_refresh"
        android:icon="@android:drawable/ic_menu_rotate"
        android:title="@string/refresh"
        android:orderInCategory="20"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/reset_token"
        android:icon="@android:drawable/ic_input_delete"
        android:title="@string/reset_token"
        android:orderInCategory="21"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/reset_all_tokens"
        android:icon="@android:drawable/ic_menu_delete"
        android:title="@string/reset_all_tokens"
        android:orderInCategory="22"
        app:showAsAction="ifRoom" />

</menu>