<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/_5sdp"
    app:cardCornerRadius="@dimen/_5sdp"
    app:cardUseCompatPadding="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@android:id/icon"
            android:layout_width="80dip"
            android:layout_height="80dip"
            android:layout_marginTop="8dip"
            android:contentDescription="@string/thumbnail_description"
            android:src="@android:drawable/ic_menu_report_image" />

        <TextView
            android:id="@android:id/text1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dip"
            android:layout_marginTop="25dip"
            android:layout_toEndOf="@android:id/icon"
            android:ellipsize="end"
            android:singleLine="true"
            android:text="@string/display_item_default_name"
            android:textAppearance="?android:attr/textAppearanceListItem" />

        <TextView
            android:id="@android:id/text2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@android:id/text1"
            android:layout_alignStart="@android:id/text1"
            android:layout_toEndOf="@android:id/icon"
            android:ellipsize="end"
            android:singleLine="true"
            android:text="@string/display_item_default_types"
            android:textAppearance="?android:attr/textAppearanceSmall" />
    </RelativeLayout>

</androidx.cardview.widget.CardView>


