<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".onedrive.ItemFragment"
    android:background="@android:color/white">

    <TextView
        android:id="@+id/onedrivegallery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="One Drive Gallery"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:gravity="center"
        android:textColor="@color/black"
        android:textSize="@dimen/_20sdp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true" />

    <ImageView
        android:id="@+id/close"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:src="@drawable/ic_closeblack" />

    <ImageView
        android:id="@+id/done"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:src="@drawable/ic_baseline_done_24" />

    <RadioGroup
        android:id="@android:id/inputArea"
        android:layout_width="wrap_content"
        android:visibility="gone"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentTop="true">

        <RadioButton
            android:text="@string/view_format_visualize"
            android:id="@android:id/button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true" />

        <RadioButton
            android:text="@string/view_format_json"
            android:id="@android:id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RadioGroup>

    <ListView
        android:id="@android:id/list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:listitem="@layout/display_item_resource"
        android:layout_below="@id/onedrivegallery"
        android:visibility="gone" />

    <TextView
        android:id="@+id/json"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@android:id/inputArea"
        android:maxLines="1000"
        android:scrollbars="vertical"
        android:visibility="gone" />

    <TextView
        android:id="@android:id/empty"
        android:text="@string/empty_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@android:id/inputArea"
        android:gravity="center"
        android:visibility="invisible"
        android:background="@color/white"
        android:textColor="@android:color/black" />

    <LinearLayout
        android:id="@android:id/progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:visibility="visible">

        <TextView
            android:id="@android:id/text1"
            android:text="@string/loading_progress_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="@dimen/activity_horizontal_margin" />

        <ProgressBar
            android:id="@android:id/secondaryProgress"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />
    </LinearLayout>
</RelativeLayout>